Sat May 13 00:09:59 2000  Denis Chertykov  <denisc@overta.ru>

	* config/avr/t-avr: Added definition of FLOAT while generates
	fp-bit.c

	* config/avr/avr.md: `NEXT_INSN (insn)' substituted to `insn' in
	peepholes for tst+jump = sbrs/sbrc optimization.

Fry May 12 20:03:00 CEST 2000  Jan Hubicka  <jh@suse.cz>

	* expr.c (emit_push_insn): Do not adjust stack pointer when
	preallocating.

Fri May 12 19:03:58 2000  Philippe De Muyter  <phdm@macqel.be>

	* ggc-simple.c (offsetof): Macro fallback definition moved from here ..
	* system.h (offsetof): ... to here.

2000-05-12  Richard Henderson  <rth@cygnus.com>

	* Makefile.in (final.o): Depend on BASIC_BLOCK_H.
	* final.c (final_end_function): Use app_disable.  Rearrange note
	handling into a switch.  Emit deleted labels.
	(output_asm_label): Generate label strings for deleted labels.
	* flow.c (tail_recursion_label_list): New.
	(find_basic_blocks_1): Set label_value_list directly.  Collect list
	of tail recursion labels from call_placeholders.  Don't add deleted
	labels to the label value list.
	(cleanup_cfg): Use free_EXPR_LIST_list.
	(flow_delete_insn_chain): Turn non-removable labels into notes.
	(flow_delete_block): Don't disable deleting the block because of
	a non-removable label.
	(tail_recursion_label_p): New.
	(merge_blocks_move_predecessor_nojumps): Don't disable the merge
	because of a label.
	(merge_blocks_move_successor_nojumps): Likewise.  Also move a
	jump table.
	(merge_blocks): Disable a merge because of tail recursion labels.
	* ifcvt.c (merge_if_block): Don't disable a merge because of a label.
	Use a more accurate measure of not merging the join block.
	(find_if_block): Don't disable conversion because of a label.
	(find_if_case_1, find_if_case_2): Likewise.
	* jump.c (duplicate_loop_exit_test): Preserve the kind of list
	element when copying.
	(squeeze_notes): Also leave EH notes.
	(mark_jump_label): Ignore deleted labels.  Use an INSN_LIST for
	REG_LABEL notes.